index.html update
Added section 3 to index.html

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <button type="button">Order Service</button>
       </section>
       <section>
-        <h2>Our advantages</h2>
+        <h2 hidden>Our advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -108,6 +108,83 @@
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <a href="#">
+              <img
+                src="./images/section3bankingapp.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <h3>Banking App</h3>
+              <p>App</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="./images/section3cashesspayment.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <h3>Cashless Payment</h3>
+              <p>Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="./images/section3meditationapp.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h3>Meditation App</h3>
+              <p>App</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="./images/section3taxiservise.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <h3>Taxi Service</h3>
+              <p>Marketing</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="./images/section3screenilustration.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <h3>Screen Illustrations</h3>
+              <p>Design</p>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img
+                src="./images/section3onlinecourses.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <h3>Online Courses</h3>
+              <p>Marketing</p>
+            </a>
           </li>
         </ul>
       </section>
