--- a/index.html
+++ b/index.html
@@ -13,58 +13,58 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="#">Studio</a></li>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Contacts</a></li>
+        <a href="./index.html" class="logo"><span class="logo-web-part">Web</span><span class="logo-studio-part">Studio</span></a>
+        <ul class="page-menu">
+          <li><a href="#" class="page-menu-list">Studio</a></li>
+          <li><a href="#" class="page-menu-list">Portfolio</a></li>
+          <li><a href="#" class="page-menu-list">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a href="mailto:info@devstudio.com" target="_blank"
+            <a href="mailto:info@devstudio.com" target="_blank" class="page-menu-contacts"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a href="tel:+110001111111" target="_blank">+11 (000) 111-11-11</a>
+            <a href="tel:+110001111111" target="_blank" class="page-menu-contacts">+11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
     </header>
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="main-section-one">
+        <h1 class="slogan">Effective Solutions for Your Business</h1>
+        <button type="button" class="order-servise-button"><span class="order-servise-button-txt">Order Service</span></button>
       </section>
       <section>
         <h2 hidden>Our advantages</h2>
-        <ul>
+        <ul class="advantages-list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="advantages-list-title">Strategy</h3>
+            <p class="advantages-list-txt">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="advantages-list-title">Punctuality</h3>
+            <p class="advantages-list-txt">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="advantages-list-title">Diligence</h3>
+            <p class="advantages-list-txt">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="advantages-list-title">Technologies</h3>
+            <p class="advantages-list-txt">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
