--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" class="logo"><span class="logo-web-part">Web</span><span class="logo-studio-part">Studio</span></a>
+        <a href="./index.html" class="logo">Web<span class="logo-studio-part">Studio</span></a>
         <ul class="page-menu">
-          <li><a href="#" class="page-menu-list">Studio</a></li>
+          <li><a href="./index.html" class="page-menu-list">Studio</a></li>
           <li><a href="#" class="page-menu-list">Portfolio</a></li>
           <li><a href="#" class="page-menu-list">Contacts</a></li>
         </ul>
