--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <a href="./index.html" class="logo">Web<span class="logo-studio-part">Studio</span></a>
         <ul class="page-menu">
           <li><a href="./index.html" class="page-menu-list">Studio</a></li>
-          <li><a href="#" class="page-menu-list">Portfolio</a></li>
-          <li><a href="#" class="page-menu-list">Contacts</a></li>
+          <li><a href="" class="page-menu-list">Portfolio</a></li>
+          <li><a href="" class="page-menu-list">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="adress">
         <ul>
           <li>
             <a href="mailto:info@devstudio.com" target="_blank" class="page-menu-contacts"
