--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
       <section class="main-section-one">
         <h1 class="slogan">Effective Solutions for Your Business</h1>
-        <button type="button" class="border-servise-button"><span class="border-servise-button-txt">Order Service</span></button>
+        <button type="button" class="border-servise-button">Order Service</button>
       </section>
       <section>
         <h2 hidden>Our advantages</h2>
