--- a/index.html
+++ b/index.html
@@ -71,48 +71,48 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Our Team</h2>
+      <section class="our-team-section">
+        <h2 class="our-team-header">Our Team</h2>
         <ul>
-          <li>
+          <li class="our-team-cards">
             <img
               src="./images/markguerrero.jpg"
               alt="Mark Guerrero photo"
               width="264"
               height="260"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="advantages-list-title">Mark Guerrero</h3>
+            <p class="our-team-txt">Product Designer</p>
           </li>
-          <li>
+          <li class="our-team-cards">
             <img
               src="./images/tomford.jpg"
               alt="Tom Ford photo"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="advantages-list-title">Tom Ford</h3>
+            <p class="our-team-txt">Frontend Developer</p>
           </li>
-          <li>
+          <li class="our-team-cards">
             <img
               src="./images/camilagarcia.jpg"
               alt="Camila Garcia photo"
               width="264"
               height="260"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="advantages-list-title">Camila Garcia</h3>
+            <p class="our-team-txt">Marketing</p>
           </li>
-          <li>
+          <li class="our-team-cards">
             <img
               src="./images/danielwilson.jpg"
               alt="Daniel Wilson photo"
               width="264"
               height="260"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="advantages-list-title">Daniel Wilson</h3>
+            <p class="our-team-txt">UI Designer</p>
           </li>
         </ul>
       </section>
