--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </ul>
       </section>
       <section>
-        <h2>Our Portfolio</h2>
+        <h2 class="our-team-header">Our Portfolio</h2>
         <ul>
           <li>
             <a href="#">
@@ -132,7 +132,6 @@
             </a>
           </li>
           <li>
-            <a href="#">
               <img
                 src="./images/section3cashesspayment.jpg"
                 alt="Cashless Payment"
@@ -141,10 +140,8 @@
               />
               <h3>Cashless Payment</h3>
               <p>Marketing</p>
-            </a>
           </li>
           <li>
-            <a href="#">
               <img
                 src="./images/section3meditationapp.jpg"
                 alt="Meditation App"
@@ -153,10 +150,8 @@
               />
               <h3>Meditation App</h3>
               <p>App</p>
-            </a>
           </li>
           <li>
-            <a href="#">
               <img
                 src="./images/section3taxiservise.jpg"
                 alt="Taxi Service"
@@ -165,10 +160,8 @@
               />
               <h3>Taxi Service</h3>
               <p>Marketing</p>
-            </a>
           </li>
           <li>
-            <a href="#">
               <img
                 src="./images/section3screenilustration.jpg"
                 alt="Screen Illustrations"
@@ -177,10 +170,8 @@
               />
               <h3>Screen Illustrations</h3>
               <p>Design</p>
-            </a>
           </li>
           <li>
-            <a href="#">
               <img
                 src="./images/section3onlinecourses.jpg"
                 alt="Online Courses"
@@ -189,7 +180,6 @@
               />
               <h3>Online Courses</h3>
               <p>Marketing</p>
-            </a>
           </li>
         </ul>
       </section>
