--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@
                 width="360"
                 height="300"
               />
-              <h3>Banking App</h3>
-              <p>App</p>
+              <h3 class="product-name">Banking App</h3>
+              <p class="product-type">App</p>
           </li>
           <li>
               <img
@@ -136,8 +136,8 @@
                 width="360"
                 height="300"
               />
-              <h3>Cashless Payment</h3>
-              <p>Marketing</p>
+              <h3 class="product-name">Cashless Payment</h3>
+              <p class="product-type">Marketing</p>
           </li>
           <li>
               <img
@@ -146,8 +146,8 @@
                 width="360"
                 height="300"
               />
-              <h3>Meditation App</h3>
-              <p>App</p>
+              <h3 class="product-name">Meditation App</h3>
+              <p class="product-type">App</p>
           </li>
           <li>
               <img
@@ -156,8 +156,8 @@
                 width="360"
                 height="300"
               />
-              <h3>Taxi Service</h3>
-              <p>Marketing</p>
+              <h3 class="product-name">Taxi Service</h3>
+              <p class="product-type">Marketing</p>
           </li>
           <li>
               <img
@@ -166,8 +166,8 @@
                 width="360"
                 height="300"
               />
-              <h3>Screen Illustrations</h3>
-              <p>Design</p>
+              <h3 class="product-name">Screen Illustrations</h3>
+              <p class="product-type">Design</p>
           </li>
           <li>
               <img
@@ -176,7 +176,7 @@
                 width="360"
                 height="300"
               />
-              <h3>Online Courses</h3>
+              <h3 class="product-name">Online Courses</h3>
               <p>Marketing</p>
           </li>
         </ul>
