--- a/index.html
+++ b/index.html
@@ -177,13 +177,13 @@
                 height="300"
               />
               <h3 class="product-name">Online Courses</h3>
-              <p>Marketing</p>
+              <p class="product-type">Marketing</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="/">WebStudio</a>
+    <footer class="footer-section">
+      <a href="./index.html" class="logo">Web<span class="logo-studio-part">Studio</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing &#x26; growth solutions.
