--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
       </section>
     </main>
     <footer class="footer-section">
-      <a href="./index.html" class="logo">Web<span class="logo-studio-part">Studio</span></a>
-      <p>
+      <a href="./index.html" class="logo-foot">Web<span class="logo-studio-part-foot">Studio</span></a>
+      <p class="footer-txt">
         Increase the flow of customers and sales for your business with digital
         marketing &#x26; growth solutions.
       </p>
