list-style-type: none

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </ul>
       </nav>
       <address class="adress">
-        <ul>
+        <ul class="list">
           <li>
             <a href="mailto:info@devstudio.com" target="_blank" class="page-menu-contacts"
               >info@devstudio.com</a
@@ -118,7 +118,7 @@
       </section>
       <section>
         <h2 class="our-team-header">Our Portfolio</h2>
-        <ul>
+        <ul class="list">
           <li>
               <img
                 src="./images/section3bankingapp.jpg"
